[package]
name = "cmd-minesweeper"
version = "0.1.2"
authors = ["CoByte"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A simple command line based minesweeper clone"
homepage = "https://github.com/CoByte/rs-minesweeper"
repository = "https://github.com/CoByte/rs-minesweeper"
readme = "README.md"
keywords = ["cli", "minesweeper"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
crossterm = "0.19.0"
itertools = "0.10.0"
clap = "2.33.3"